--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="page">
-        <img src="" alt="">
+        <img src="assets/main-image.png" alt="imagem de um cupcake com graos de cafe e chantilly">
         <main>
             <section id="about">
                 <h1>Cupcake de café com chantilly</h1>
