--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -56,5 +56,8 @@
             </section>
         </main>
     </div>
+    <footer>
+        Feito com <img src="assets/Vector.svg" alt="coração"> pela Rocketseat
+    </footer>
 </body>
 </html>
